# rrr

./: .gitignore  CMakeLists.txt  shader_compile.sh
assets/shaders/: basic_shader.frag  basic_shader.vert
include/vulkan/: vulkan.cppm  vulkan.h  vulkan.hpp  vulkan_android.h  vulkan_beta.h  vulkan_core.h  vulkan_directfb.h  vulkan_enums.hpp  vulkan_extension_inspection.hpp  vulkan_format_traits.hpp  vulkan_fuchsia.h  vulkan_funcs.hpp  vulkan_ggp.h  vulkan_handles.hpp  vulkan_hash.hpp  vulkan_hpp_macros.hpp  vulkan_ios.h  vulkan_macos.h  vulkan_metal.h  vulkan_profiles.hpp  vulkan_raii.hpp  vulkan_screen.h  vulkan_shared.hpp  vulkan_static_assertions.hpp  vulkan_to_string.hpp  vulkan_vi.h  vulkan_video.hpp  vulkan_win32.h  vulkan_xcb.h  vulkan_xlib.h  vulkan_xlib_xrandr.h
lib/windows/: shaderc.lib
src/: main.cpp  rrr_device.cpp  rrr_device.hpp  rrr_pipeline.cpp  rrr_pipeline.hpp  rrr_swap_chain.cpp  rrr_swap_chain.hpp  rrr_window.cpp  rrr_window.hpp  test_app.cpp  test_app.hpp
src/backend/: device.cpp  device.hpp
